--- a/spec/geco.tex
+++ b/spec/geco.tex
@@ -1,8 +1,10 @@
-\documentclass{article}
+\documentclass[6pt]{article}
 
 \def\version{0.1 Rev 2.0}
 \def\name{Germanium Core}
 \def\sname{GeCo}
+
+\usepackage{tabularx}
 
 \title{\name}
 \author{Lilly Anderson}
@@ -33,8 +35,79 @@ This section describes compressed instruction encodings for \sname\ to help redu
 \subsection{Overview}
 CGC is used to compress a few different kinds of instructions, specifically common types of instructions, such as stack, thread, and global relative accesses, loading immediates, arithmetic operations, jumping, and branching. It supports 4 different encodings.
 \begin{itemize}
-    \item 
+    \item RelIAcc Encoding, handles relative accesses for the SP, TP, and GP registers with an offset from an immediate
+    \item ARAcc Encoding, handles Arithmetic accesses between 2 registers
+    \item AIAcc Encoding, handles Arithmetic accesses with 1 register and an immediate,
+    \item Ctrl Encoding, priviledged instructions for processor control, provides 1 register
 \end{itemize}
+\subsection{RelIAcc}
+The RelIAcc encoding handles relative memory accesses using an immediate as offset.
+
+\begin{center}
+\begin{tabularx}{\textwidth}{ |>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X| }
+    \hline
+    Instruction mneumonic & Use & Format \\
+    \hline
+    cgc.lb & Loads 1 byte & cgc.lb rd, imm(ra) \\
+    \hline
+    cgc.ld & Loads 2 bytes & cgc.ld rd, imm(ra) \\
+    \hline
+    cgc.lq & Loads 4 bytes & cgc.lq rd, imm(ra) \\
+    \hline
+    cgc.lo & Loads 8 bytes & cgc.lo rd, imm(ra) \\
+    \hline
+    cgc.sb & Stores 1 byte & cgc.sb rs, imm(ra) \\
+    \hline
+    cgc.sd & Stores 2 bytes & cgc.sd rs, imm(ra) \\
+    \hline
+    cgc.sq & Stores 4 bytes & cgc.sq rs, imm(ra) \\
+    \hline
+    cgc.so & Stores 8 bytes & cgc.so rs, imm(ra) \\
+    \hline
+\end{tabularx}
+\end{center}
+
+\begin{center}
+\begin{tabularx}{\textwidth}{ |>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X| }
+    \hline
+    Bit range (inclusive) & Name & Abbreviation \\
+    \hline
+    0..1 & Encoding Size & n/a \\
+    \hline
+    2..4 & Opcode & n/a \\
+    \hline
+    5..6 & Address IDR & ra \\
+    \hline
+    7..9 & Source/Destination HGP Register & rs/rd \\
+    \hline
+    10..15 & Immediate Offset & imm \\
+    \hline
+\end{tabularx}
+\end{center}
+
+\begin{center}
+\begin{tabularx}{\textwidth}{ |>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X| }
+    \hline
+    Opcode & Instruction \\
+    \hline
+    0b000 & cgc.lb \\
+    \hline
+    0b001 & cgc.ld \\
+    \hline
+    0b010 & cgc.lq \\
+    \hline
+    0b011 & cgc.lo \\
+    \hline
+    0b100 & cgc.sb \\
+    \hline
+    0b101 & cgc.sd \\
+    \hline
+    0b110 & cgc.sq \\
+    \hline
+    0b111 & cgc.so \\
+    \hline
+\end{tabularx}
+\end{center}
 
 \section{32 Bit Encodings}
 
@@ -47,68 +120,70 @@ The \sname\ processors support 31 different general purpose registers, and 1 reg
 
 \subsection{Definitions}
 \begin{center}
-\begin{tabular}{ |c|c|c| }
+\begin{tabularx}{\textwidth}{ |>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X| }
     \hline
     Term & Read & Write \\
     \hline
-    RAWA & Any & Any \\
+    AA & Any & Any \\
     \hline
-    RAWI & Any & Ignored \\
+    AI & Any & Ignored \\
     \hline
-    RAWL & Any & Legal \\
+    AL & Any & Legal \\
     \hline
-\end{tabular}
+\end{tabularx}
 \end{center}
 
 \subsection{Main Registers}
 Main registers are intended to be used for general processing.
 \begin{center}
-\begin{tabular}{ |c|c|c| }
+\begin{tabularx}{\textwidth}{ |>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X| }
     \hline
     Register ID & Name & Use \\
     \hline
     0b00000 & Zero/Scratch & Will read zero\footnotemark[1]\\
     \hline
-    0b00001 & Frame pointer & Points to the start of the frame \\
+    0b00001 & Stack base & Start of the stack in memory \\
     \hline
-    0b00010 & Stack pointer & Current position in the stack \\
+    0b00010 & Return address & Stores where to return to after a jump \\
     \hline
-    0b00011 & Stack base & Start of the stack in memory \\
+    0b00011 & Frame pointer (IDR0) & Points to the start of the frame \\
     \hline
-    0b00100 & Global pointer & Points to the global storage region \\
+    0b00100 & Stack pointer (IDR0) & Current position in the stack \\
     \hline
-    0b00101 & Thread pointer & Points to the thread storage region \\
+    0b00101 & Global pointer (IDR0) & Points to the global storage region \\
     \hline
-    0b00110 & Return address & Stores where to return to after a jump \\
+    0b00110 & Thread pointer (IDR0) & Points to the thread storage region \\
     \hline
-    0b00111-0b11111 & gp0-gp24 & General purpose, any use \\
+    0b00111-0b01111 & hgp0-hgp7 & High access general purpose, used in cgc \\
     \hline
-\end{tabular}
+    0b10000-0b11111 & gp0-gp16 & General purpose, any use \\
+    \hline
+    \footnotetext[1]{It can be read/write if the trap bit in the processor flags is set, it's state must be consistent accross traps}
+\end{tabularx}
 \end{center}
-\footnotetext[1]{It can be read/write if the trap bit in the processor flags is set, it's state must be consistent accross traps}
 
 \subsection{Control/Status Registers}
 Contro/Status Registers are used to control aspects of the processor, or query the status of different parts of the processor.
 
 \subsubsection{CSR Listing}
 \begin{center}
-\begin{tabular}{ |c|c|c|c|c|c| }
+\begin{tabularx}{\textwidth}{ |>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X| }
     \hline
     Address & Bits & Name & Access & Minimum Mode & Section \\
     \hline
-    0x000000 & 64 & scause & RAWI & Supervisor & 7.2 \\
+    0x000000 & 64 & scause & AA & Supervisor & 6.2 \\
     \hline
-    0x000001 & 64 & strap & RAWA & Supervisor & 7.2 \\
+    0x000001 & 64 & strap & AA & Supervisor & 6.2 \\
     \hline
-    0x000002 & 64 & sret & RAWA & Supervisor & 7.2 \\
+    0x000002 & 64 & sret & AA & Supervisor & 6.2 \\
     \hline
-    0x000003 & 64 & sscratch & RAWA & Supervisor & 7.2 \\
+    0x000003 & 64 & sscratch & AA & Supervisor & 6.2 \\
     \hline
-    0x010000 & 64 & memmode & RAWL & Supervisor & 8 \\
+    0x010000 & 64 & memmode & AA & Supervisor & 7 \\
     \hline
-    0x010014 & 64 & memscratch & RAWA & Supervisor & 8 \\
+    0x010014 & 64 & memreg & AA & Supervisor & 7 \\
     \hline
-\end{tabular}
+\end{tabularx}
 \end{center}
 
 \section{Traps}
@@ -117,7 +192,7 @@ On a GeCo system traps serve to help handle internal errors, and external device
 \subsection{Overview}
 To provide proper access to external devices, and internal error handling, GeCo provides traps as they come in. These traps can occur due to several reasons, and can be mapped to different values.
 \begin{center}
-\begin{tabular}{ |c|c|c| }
+\begin{tabularx}{\textwidth}{ |>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X| }
     \hline
     Source & Number & Reason \\
     \hline
@@ -135,7 +210,7 @@ To provide proper access to external devices, and internal error handling, GeCo 
     Internal (0) & 0x0E & Read page fault \\
     Internal (0) & 0x10 & Write page fault \\
     \hline
-\end{tabular}
+\end{tabularx}
 \end{center}
 
 \subsection{CSRs}
@@ -145,7 +220,7 @@ To allow for changing the device's state for traps there are several CSRs provid
 Supervisor trap, or "strap", is a CSR used to control the virtual address of the trap handler, if virtual addressing is disabled then this address will be treated as physical.
 
 \begin{center}
-\begin{tabular}{ |c|c|c| }
+\begin{tabularx}{\textwidth}{ |>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X| }
     \hline
     Bit(s) & Name & Use \\
     \hline
@@ -153,7 +228,7 @@ Supervisor trap, or "strap", is a CSR used to control the virtual address of the
     \hline
     63 & Strap On & Enables trapping\footnotemark[1] \\
     \hline
-\end{tabular}
+\end{tabularx}
 \end{center}
 \footnotetext[1]{If a trap occurs and the strap.on bit is not set, then the core may repeatedly trap until powered down, halt execution but remain powered on, or it can power down that core, if every core in a chip is powered down then the entire system must power down. Regardless of if it shuts the core down, if other cores exist the CCD (specified in 7.3) must be notified}
 
@@ -166,7 +241,7 @@ The CCD provides different regions, each region contains registers used for cont
 The CCR must always be provided at physical address 0x2000, and take up 0x2000 bytes. The CLB must be provided at physical address 0x1000, and take up 0x1000 bytes.
 \begin{center}
 Core Control Region Layout
-\begin{tabular}{ |c|c|c|c| }
+\begin{tabularx}{\textwidth}{ |>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X| }
     \hline
     Byte & Size & Name & Use \\
     \hline
@@ -176,7 +251,7 @@ Core Control Region Layout
     \hline
     0x1FF8 & 2 & Core 4095 Control & Used to send a signal to the core\footnotemark[1] \\
     \hline
-\end{tabular}
+\end{tabularx}
 \end{center}
 \footnotetext[1]{If a core is not associated with that register, nothing should happen}
 
